k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hubspot-proxy
  namespace: hubspot-proxy-demo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: hubspot-proxy
  ports:
    - name: http
      port: 8080
      targetPort: http
